--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ encoding: UTF-8
 # Setup
 safe:        true
 port: 4000
-description: A free, open source, powerful tool for working with messy data
+description: A free, open source, power tool for working with messy data
 # baseurl: http://www.openrefine.org
 url: http://www.openrefine.org 
    # the optional subpath of your site, e.g. "/blog"
@@ -30,7 +30,7 @@ plugins:
 
 # Custom vars
 version:            3.5.3
-sidebar_home_link:  true
+sidebar_home_link:  false
 #sidebar_blog_link:  '/blog'   # By default, your home page is your blog
                                 # page. If you change your paginate_path,
                                 # set this to the root of the paginate_path
